--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@ text-align: center;
 fa{
   text-align: center;
   font-size: 30px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 
